--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "connect-session-sequelize": "^7.1.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
